fix: slider width on tablet screen

--- a/shelter/sass/pages/main.sass
+++ b/shelter/sass/pages/main.sass
@@ -185,7 +185,6 @@
         @include media-mobile
             max-width: 100%
     .slider
-        width: 100%
         @include media-tablet
             padding: 0 3.91vw        
 
